exports[`FileDropzone accepts a function as onDOMChange prop 1`] = `
<div
  className="grommetux-box grommetux-box--direction-column grommetux-box--justify-center grommetux-box--align-center grommetux-box--responsive grommetux-box--pad-medium"
  id={undefined}
  onClick={undefined}
  role={undefined}
  style={Object {}}
  tabIndex={undefined}>
  <div
    aria-label="Box"
    className="grommetux-box grommetux-box--direction-column grommetux-box--responsive grommetux-box--pad-none grommetux-box--clickable grommetux-dropzone"
    id={undefined}
    onBlur={[Function]}
    onClick={[Function]}
    onDragEnter={[Function]}
    onDragLeave={[Function]}
    onDragOver={[Function]}
    onDrop={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    role="group"
    style={Object {}}
    tabIndex={0}>
    <label
      className="grommetux-label grommetux-label--margin-medium grommetux-label--medium"
      htmlFor={undefined}>
      Click or drop a file to upload
    </label>
  </div>
  <input
    className="grommetux-dropzone__input"
    multiple={false}
    onChange={[Function]}
    type="file" />
</div>
`;

exports[`FileDropzone has correct default options 1`] = `
<div
  className="grommetux-box grommetux-box--direction-column grommetux-box--justify-center grommetux-box--align-center grommetux-box--responsive grommetux-box--pad-medium"
  id={undefined}
  onClick={undefined}
  role={undefined}
  style={Object {}}
  tabIndex={undefined}>
  <div
    aria-label="Box"
    className="grommetux-box grommetux-box--direction-column grommetux-box--responsive grommetux-box--pad-none grommetux-box--clickable grommetux-dropzone"
    id={undefined}
    onBlur={[Function]}
    onClick={[Function]}
    onDragEnter={[Function]}
    onDragLeave={[Function]}
    onDragOver={[Function]}
    onDrop={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    role="group"
    style={Object {}}
    tabIndex={0}>
    <label
      className="grommetux-label grommetux-label--margin-medium grommetux-label--medium"
      htmlFor={undefined}>
      Click or drop a file to upload
    </label>
  </div>
  <input
    className="grommetux-dropzone__input"
    multiple={false}
    onChange={[Function]}
    type="file" />
</div>
`;

exports[`FileDropzone should create a snapshot with full screen drop target set to true 1`] = `
<div
  className="grommetux-box grommetux-box--direction-column grommetux-box--justify-center grommetux-box--align-center grommetux-box--responsive grommetux-box--pad-medium"
  id={undefined}
  onClick={undefined}
  role={undefined}
  style={Object {}}
  tabIndex={undefined}>
  <div
    aria-label="Box"
    className="grommetux-box grommetux-box--direction-column grommetux-box--responsive grommetux-box--pad-none grommetux-box--clickable grommetux-dropzone"
    id={undefined}
    onBlur={[Function]}
    onClick={[Function]}
    onDragEnter={[Function]}
    onDragLeave={[Function]}
    onDragOver={[Function]}
    onDrop={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    role="group"
    style={Object {}}
    tabIndex={0}>
    <label
      className="grommetux-label grommetux-label--margin-medium grommetux-label--medium"
      htmlFor={undefined}>
      Click or drop a file to upload
    </label>
  </div>
  <input
    className="grommetux-dropzone__input"
    multiple={false}
    onChange={[Function]}
    type="file" />
</div>
`;

exports[`FileDropzone should create a snapshot with label props 1`] = `
<div
  className="grommetux-box grommetux-box--direction-column grommetux-box--justify-center grommetux-box--align-center grommetux-box--responsive grommetux-box--pad-medium"
  id={undefined}
  onClick={undefined}
  role={undefined}
  style={Object {}}
  tabIndex={undefined}>
  <div
    aria-label="Box"
    className="grommetux-box grommetux-box--direction-column grommetux-box--responsive grommetux-box--pad-none grommetux-box--clickable grommetux-dropzone"
    id={undefined}
    onBlur={[Function]}
    onClick={[Function]}
    onDragEnter={[Function]}
    onDragLeave={[Function]}
    onDragOver={[Function]}
    onDrop={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    role="group"
    style={Object {}}
    tabIndex={0}>
    <label
      className="grommetux-label grommetux-label--margin-medium grommetux-label--medium"
      htmlFor={undefined}>
      Testing
    </label>
  </div>
  <input
    className="grommetux-dropzone__input"
    multiple={false}
    onChange={[Function]}
    type="file" />
</div>
`;

exports[`FileDropzone should create a snapshot with multiple prop set to true 1`] = `
<div
  className="grommetux-box grommetux-box--direction-column grommetux-box--justify-center grommetux-box--align-center grommetux-box--responsive grommetux-box--pad-medium"
  id={undefined}
  onClick={undefined}
  role={undefined}
  style={Object {}}
  tabIndex={undefined}>
  <div
    aria-label="Box"
    className="grommetux-box grommetux-box--direction-column grommetux-box--responsive grommetux-box--pad-none grommetux-box--clickable grommetux-dropzone"
    id={undefined}
    onBlur={[Function]}
    onClick={[Function]}
    onDragEnter={[Function]}
    onDragLeave={[Function]}
    onDragOver={[Function]}
    onDrop={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    role="group"
    style={Object {}}
    tabIndex={0}>
    <label
      className="grommetux-label grommetux-label--margin-medium grommetux-label--medium"
      htmlFor={undefined}>
      Click or drop a file to upload
    </label>
  </div>
  <input
    className="grommetux-dropzone__input"
    multiple={true}
    onChange={[Function]}
    type="file" />
</div>
`;

exports[`FileDropzone should create a snapshot with preview prop set to false 1`] = `
<div
  className="grommetux-box grommetux-box--direction-column grommetux-box--justify-center grommetux-box--align-center grommetux-box--responsive grommetux-box--pad-medium"
  id={undefined}
  onClick={undefined}
  role={undefined}
  style={Object {}}
  tabIndex={undefined}>
  <div
    aria-label="Box"
    className="grommetux-box grommetux-box--direction-column grommetux-box--responsive grommetux-box--pad-none grommetux-box--clickable grommetux-dropzone"
    id={undefined}
    onBlur={[Function]}
    onClick={[Function]}
    onDragEnter={[Function]}
    onDragLeave={[Function]}
    onDragOver={[Function]}
    onDrop={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    role="group"
    style={Object {}}
    tabIndex={0}>
    <label
      className="grommetux-label grommetux-label--margin-medium grommetux-label--medium"
      htmlFor={undefined}>
      Click or drop a file to upload
    </label>
  </div>
  <input
    className="grommetux-dropzone__input"
    multiple={false}
    onChange={[Function]}
    type="file" />
</div>
`;
